# AgentGPT

./: .gitignore  README.md  package-lock.json  package.json
backend/: pyproject.toml  requirements-dev.txt  requirements-voice.txt  requirements.txt
backend/app/: __init__.py  __main__.py  audit.py  config_store.py  daemon.py  dreams.py  logs.py  main.py  models.py  ollama.py  policies.py  rag.py  router.py  scheduler.py  skills.py  storage.py  voice.py
backend/skills/dev_assistant/: manifest.json  skill.py
backend/skills/file_explorer/: manifest.json  skill.py
backend/skills/knowledge_ingest/: manifest.json  skill.py
backend/tests/: conftest.py  test_chat.py  test_config.py  test_health.py  test_models.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx
ui/src/lib/: api.ts
ui/src/styles/: index.css
