[package]
name = "desktop"
version = "0.1.0"
description = "Local AI Assistant Desktop Shell"
authors = ["Local"]
edition = "2021"

[build-dependencies]
tauri-build = "2.0.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.1.1", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.0.0"
